adding initital changes
